# pinlint

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: architecture.md  charter.md  logo-prompt.md
examples/: check.py
src/pinlint/: __init__.py  baseline.py  cli.py  lint.py  model.py  parse.py  sarif.py  severity.py
tests/: test_baseline.py  test_cli.py  test_duplicate.py  test_lint.py  test_lint_file.py  test_sarif.py  test_severity.py
