[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pinlint"
version = "0.6.0"
description = "Static linter that checks a requirements file is fully version-pinned and hash-pinned, for CI and pre-commit."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Amaar Chughtai" }]
keywords = [
  "requirements",
  "pip",
  "linter",
  "supply-chain",
  "security",
  "hashes",
  "pinning",
  "reproducible-builds",
  "pre-commit",
  "ci",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed",
]
dependencies = ["packaging>=21"]

[project.scripts]
pinlint = "pinlint.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]

[project.urls]
Homepage = "https://github.com/amaar-mc/pinlint"
Repository = "https://github.com/amaar-mc/pinlint"
Issues = "https://github.com/amaar-mc/pinlint/issues"
Changelog = "https://github.com/amaar-mc/pinlint/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/pinlint"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
files = ["src"]
